solver probleem with overflow and mobile screen

--- a/frontend/src/MainApp/MainApp.module.scss
+++ b/frontend/src/MainApp/MainApp.module.scss
@@ -7,6 +7,8 @@
         .container {
             display: flex;
             flex-direction: column;
+            min-height: auto;
+            overflow-y: auto;
             
             .content {
                 flex-grow: 1;
